Sort and clean filesystem

--- a/WWMesa/1.ipynb
+++ b/WWMesa/1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,28 +59,28 @@
     "            a = MoneyAgent(self)\n",
     "\n",
     "    def step(self):\n",
-    "        self.agents.shuffle_do(\"say_hi\")"
+    "        self.agents.do(\"say_hi\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi I'm an agent, You can call me 6!\n",
-      "Hi I'm an agent, You can call me 4!\n",
-      "Hi I'm an agent, You can call me 7!\n",
-      "Hi I'm an agent, You can call me 2!\n",
-      "Hi I'm an agent, You can call me 9!\n",
       "Hi I'm an agent, You can call me 1!\n",
-      "Hi I'm an agent, You can call me 8!\n",
+      "Hi I'm an agent, You can call me 2!\n",
+      "Hi I'm an agent, You can call me 3!\n",
+      "Hi I'm an agent, You can call me 4!\n",
       "Hi I'm an agent, You can call me 5!\n",
-      "Hi I'm an agent, You can call me 10!\n",
-      "Hi I'm an agent, You can call me 3!\n"
+      "Hi I'm an agent, You can call me 6!\n",
+      "Hi I'm an agent, You can call me 7!\n",
+      "Hi I'm an agent, You can call me 8!\n",
+      "Hi I'm an agent, You can call me 9!\n",
+      "Hi I'm an agent, You can call me 10!\n"
      ]
     }
    ],
