Make the Exchange function template

--- a/WWMesa/1.ipynb
+++ b/WWMesa/1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,15 @@
     "        \n",
     "        self.wealth = 1\n",
     "    def say_hi(self):\n",
-    "        print(f\"Hi I'm an agent, You can call me {str(self.unique_id)}!\")\n"
+    "        print(f\"Hi I'm an agent, You can call me {str(self.unique_id)}!\")\n",
+    "    def sayWealth(self):\n",
+    "        print(f\"Hi I've {str(self.wealth)}$\")\n",
+    "    def ex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,28 +62,28 @@
     "            a = MoneyAgent(self)\n",
     "\n",
     "    def step(self):\n",
-    "        self.agents.do(\"say_hi\")"
+    "        self.agents.shuffle_do(\"sayWealth\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi I'm an agent, You can call me 1!\n",
-      "Hi I'm an agent, You can call me 2!\n",
-      "Hi I'm an agent, You can call me 3!\n",
-      "Hi I'm an agent, You can call me 4!\n",
-      "Hi I'm an agent, You can call me 5!\n",
-      "Hi I'm an agent, You can call me 6!\n",
-      "Hi I'm an agent, You can call me 7!\n",
-      "Hi I'm an agent, You can call me 8!\n",
-      "Hi I'm an agent, You can call me 9!\n",
-      "Hi I'm an agent, You can call me 10!\n"
+      "Hi I've 1$\n",
+      "Hi I've 1$\n",
+      "Hi I've 1$\n",
+      "Hi I've 1$\n",
+      "Hi I've 1$\n",
+      "Hi I've 1$\n",
+      "Hi I've 1$\n",
+      "Hi I've 1$\n",
+      "Hi I've 1$\n",
+      "Hi I've 1$\n"
      ]
     }
    ],
