--- a/WWMesa/1.ipynb
+++ b/WWMesa/1.ipynb
@@ -43,7 +43,9 @@
     "        print(f\"Hi I'm an agent, You can call me {str(self.unique_id)}!\")\n",
     "    def sayWealth(self):\n",
     "        print(f\"Hi I've {str(self.wealth)}$\")\n",
-    "    def ex"
+    "    def exchange(self):\n",
+    "        #TODO: Complete Me!\n",
+    "        pass"
    ]
   },
   {
