Commit before Pajooheshi

--- a/FirstTryWithMesa/MakeNetwork.ipynb
+++ b/FirstTryWithMesa/MakeNetwork.ipynb
@@ -15,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 1000\n",
-      "Number of edges: 4073\n"
+      "Number of nodes: 10000\n",
+      "Number of edges: 66159\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
     "\n",
     "# Create the graph\n",
     "G = create_directed_graph(n_nodes, gamma_in, gamma_out)\n",
-    "\n",
+    "nx.write_edgelist(G, \"test.edgelist\")\n",
     "# Analyze the graph\n",
     "print(f\"Number of nodes: {G.number_of_nodes()}\")\n",
     "print(f\"Number of edges: {G.number_of_edges()}\")\n"
